# flappybird_opengl

./: CMakeLists.txt  README.md  main.cpp
animation/: animation.cpp  animation.h  animation_pointer.cpp  animation_pointer.h  animator.cpp  animator.h  linear_animation.cpp  linear_animation.h  sin_animation.cpp  sin_animation.h  starter_animation.cpp  starter_animation.h  timer_animation.cpp  timer_animation.h
engine/: game_core.cpp  game_core.h  ring_buffer.h
gui/: gui_align_panel.cpp  gui_align_panel.h  gui_element.cpp  gui_element.h  gui_label.cpp  gui_label.h  gui_panel.cpp  gui_panel.h
rank_table/: rank.cpp  rank.h  rank_table.cpp  rank_table.h  rank_table_db.h  rank_table_db_text_file.cpp  rank_table_db_text_file.h
scenes/: game_scene.cpp  game_scene.h  main_title_scene.cpp  main_title_scene.h  rank_table_scene.cpp  rank_table_scene.h  scene.h
shaders/: main_shader.fs  main_shader.vs
src/: main.cpp
src/animation/: animation_pointer.cpp  animation_pointer.h  animator.cpp  linear_animation.h  sin_animation.cpp  timer_animation.cpp  timer_animation.h
src/gui/: gui_element.h  gui_label.cpp  gui_label.h
src/rank_table/: rank_table.h  rank_table_text_file.cpp  rank_table_text_file.h
src/scenes/: main_title_scene.cpp  main_title_scene.h  rank_table_scene.cpp  rank_table_scene.h  scene.h
utils/: animation.cpp  animation.h  animation_pointer.cpp  animation_pointer.h  animator.cpp  animator.h  linear_animation.cpp  sin_animation.cpp
